--- a/src/app/components/content-post/content-post.component.scss
+++ b/src/app/components/content-post/content-post.component.scss
@@ -32,8 +32,11 @@
         padding: 12px;
         border-radius: 0 15px 0;
         font-size: 15px;
+        text-align: justify;
+        h1{
+          font-weight: 500;
+        }
         h3{
-            font-size: 22px;
             font-weight: 500;
         }
         span{
