--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,114 +1,123 @@
-.container{
+.container {
   height: 100%;
-  overflow:hidden;
-  display:flex
-  
-  
-//     // background: 
-//     //   linear-gradient(45deg, rgba(255,103,0,0.3), rgba(0, 0, 80, 0.9)),
-//     //   url('../../assets/img/login-5.png') center center no-repeat;;
+  display: flex;
+
+  //     // background:
+  //     //   linear-gradient(45deg, rgba(255,103,0,0.3), rgba(0, 0, 80, 0.9)),
+  //     //   url('../../assets/img/login-5.png') center center no-repeat;;
 }
 
-.loginCard{
- 
+.loginCard {
   border: 1px solid #000;
   border-radius: 4px;
-  background-color: rgba(255,255,255,0.85);
+  background-color: rgba(255, 255, 255, 0.85);
   width: 500px;
   height: 450px;
   margin: auto;
   margin-top: 200px;
   // margin-left: 20px;
   text-align: center;
-  padding: 60px 30px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.17), 0 1px 2px rgba(0,0,0,0.24);
-  overflow: hidden;
+  padding: 30px 30px;
+  box-shadow: 2px 4px 15px 1px rgba(0,0,0,0.85);}
+.logo {
+  width: 22px;
+  height: auto;
+  margin: -3px 4px 0;
+
 }
 
-.formInput{
+.formInput {
   margin: auto;
   margin-top: 16px;
   display: block;
   width: 60%;
   height: 40px;
-  border-radius:4px;
-  background:#ecf0f1;
+  border-radius: 4px;
+  background: #ecf0f1;
   border: #ccc 1px solid;
   padding: 8px;
-  font-size:1em;
+  font-size: 1em;
 }
 
-.btn{
+.btn {
   height: 54px;
   width: 60%;
   margin: auto;
-  margin-top: 5px;
-  
   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.17), 0 1px 2px rgba(0,0,0,0.24);
+  border-radius: 25px;
+  border: 1px solid black;
+ 
+    transition: ease-in 0.2s;
+}
+
+.btn-danger {
+  background: white;
+  color: #000;
+}
+
+.btn-danger:hover {
+  background: #574ea8;
+  color: #fff;
+}
+
+#btn-signUp {
+  background-color: lightseagreen;
+}
+
+#btn-signUp:hover {
+  background-color: #574ea8;
   transition: ease-in 0.2s;
 }
 
-#btn-signUp{
-    background-color:#2A2845;
+#btn-login {
+  background-color: lightseagreen;
 }
 
-#btn-signUp:hover{
-    background-color:#4A4865;
-    transition: ease-in 0.2s;
+#btn-login:hover {
+  background-color: #574ea8;
+  transition: ease-in 0.2s;
 }
 
-#btn-login{
-    background-color:#4A4875;
-}
-
-#btn-login:hover{
-    background-color:#5A5895;
-    transition: ease-in 0.2s;
-}
-
-h2{
-    height: 2em;
+h2 {
+  height: 2em;
 }
 
 a {
-    text-decoration: none;
-    margin-top: 16px;
+  text-decoration: none;
+  margin-top: 16px;
 }
 
-.signUpCard{
-  
+.signUpCard {
   border: 1px solid #000;
   border-radius: 4px;
-  background-color: rgba(255,255,255,0.85);
+  background-color: rgba(255, 255, 255, 0.85);
   width: 500px;
   height: 450px;
-  margin:auto;
+  margin: auto;
   margin-top: 200px;
   padding: 80px 30px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.17), 0 1px 2px rgba(0,0,0,0.24);
-  overflow: hidden;
+  box-shadow: 2px 4px 15px 1px rgba(0,0,0,0.85);
+
 }
 
-.formInputt{
+.formInputt {
   display: block;
   width: 100%;
   height: 40px;
-  border-radius:4px;
-  background:#ecf0f1;
+  border-radius: 4px;
+  background: #ecf0f1;
   border: #ccc 1px solid;
   padding: 8px;
-  font-size:1em;
+  font-size: 1em;
   margin-bottom: 18px;
 }
 
-.btnn{
+.btnn {
   height: 54px;
   margin-top: 32px;
   border: none;
@@ -118,34 +127,36 @@ a {
   text-decoration: none;
   font-size: 16px;
   border-radius: 4px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.17), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.17), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: ease-in 0.2s;
   width: 100%;
 }
 
-#btnn-signUp{
-    background-color:#2A2845;
+#btnn-signUp {
+  background-color: #2a2845;
+  border-radius: 25px;
+  border: 1px solid black;
 }
 
-#btnn-signUp:hover{
-    background-color:#4A4865;
-    transition: ease-in 0.2s;
+#btnn-signUp:hover {
+  background-color: #4a4865;
+  transition: ease-in 0.2s;
 }
 
-#btnn-signUp:disabled{
-    background-color:#eee;
-    color: #999;
+#btnn-signUp:disabled {
+  background-color: #eee;
+  color: rgb(214, 214, 214);
 }
 
-h2{
-    text-align: center;
-    height: 2em;
+h2 {
+  text-align: center;
+  height: 2em;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.label{
-    font-size: 0.9em;
+.label {
+  font-size: 0.9em;
 }
