--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="sticky-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" routerLink="/">Skil Connect</a>
+      <a class="navbar-brand" href="#" routerLink="/">Skill Connect</a>
       <button
         class="navbar-toggler"
         type="button"
